Trying overflow:hidden to fix dual scroll bar bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 html {
 	font-size: 62.5%;
-	overscroll-behavior: none;
 }
 
 body {
 	font-size: 1.4rem;
+	overflow: hidden;
 }
 
 /* Sticky header at the top */
